[gd_scene load_steps=5 format=2]

[ext_resource path="res://soundtrack/START.ogg" type="AudioStream" id=1]
[ext_resource path="res://soundtrack/Soundtrack.gd" type="Script" id=2]
[ext_resource path="res://soundtrack/fIRST.ogg" type="AudioStream" id=3]
[ext_resource path="res://soundtrack/LevelMusic.ogg" type="AudioStream" id=4]

[node name="Soundtrack" type="Node2D"]
script = ExtResource( 2 )

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[node name="LossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 15.0
